--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <title>My Resume</title>
 </head>
-<link rel="stylesheet" href="/main.css">
+<link rel="stylesheet" href="main.css">
 <body>
 
     <div class="cv-container">
         <div class="left-side">
             <div class="image">
-                <img src="/me.jpeg" alt="Dayanand Surwase" class="profile">
+                <img src="me.jpeg" alt="Dayanand Surwase" class="profile">
             </div>
 
             <div class="section-title">CONTACT</div>
@@ -83,4 +83,5 @@
     </div>
 
 </body>
+
 </html>
