--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             <div class="section-title">CONTACT</div>
             <p class="info-p">+91 8828472809</p>
             <p class="info-p">dayanandsurwase87@gmail.com</p>
-            <p class="info-p">linkedin.com/in/dayanand-surwase</p>
-            <p class="info-p">github.com/DayanandSurwase</p>
+            <p class="info-p">
+                <a href="https://www.linkedin.com/in/dayanand-surwase">linkedin.com/in/dayanand-surwase</a></p>
+            <p class="info-p">
+                 <a href="https://github.com/DayanandSurwase">github.com/DayanandSurwase</a></p>
 
             <div class="section-title">TECHNICAL SKILLS</div>
             <p class="info-p"><strong>Languages:</strong><br> Python, C/C++, SQL, JS, HTML/CSS</p>
@@ -85,3 +87,4 @@
 </body>
 
 </html>
+
